--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -32,9 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  provider: ^6.0.0
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
@@ -53,22 +51,14 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
+  assets:
+    - assets/bmi_icons/healthy.png
+    - assets/bmi_icons/obese.png
+    - assets/bmi_icons/overweight.png
+    - assets/bmi_icons/underweight.png
+    - assets/gender_icons/female.png
+    - assets/gender_icons/male.png
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
