--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   provider: ^6.0.0
   cupertino_icons: ^1.0.2
   string_validator: ^1.0.0
+  image_picker: ^1.0.0
 
 dev_dependencies:
   flutter_test:
